# Ignis

./: Cargo.toml  README.md
src/: app.rs  commands.rs  completer.rs  main.rs  pty.rs  shader.wgsl  terminal.rs  theme.rs
