[package]
name = "Ignis"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.25", default-features = false, features = ["glow"] }
egui = "0.25"
libc = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.9"
rustyline = "12.0"  # Removed non-existent feature
syntect = "5.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["term", "process", "fs", "user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "libloaderapi"] }
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Console"] }